kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-webserver.sqweeks.pr1.points.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver-service
          servicePort: 80
