kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-8080-from-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/instance
          operator: In
          values:
          - sys-ingress
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: webserver
  policyTypes:
  - Ingress
